--- a/www/css/common.css
+++ b/www/css/common.css
@@ -1,1 +1,17 @@
 @import "reset.css";
+a {
+  text-decoration: none;
+  color: #000;
+}
+.buy-ticket {
+  border: 6px solid #000;
+  text-transform: uppercase;
+}
+.buy-ticket.big {
+  padding: 25px 163px 25px 163px;
+  transition: all 0.5s;
+}
+.buy-ticket.big:hover {
+  background-color: #000;
+  color: #fff;
+}
